package baidu.bfs;

enum StatusCode {
    kOK = 0;
    kNotOK = 1;
    kUnknownCs = 2;
    kVersionError = 3;
    kIsFollower = 4;
    kInShutdownProgress = 5;
    kBadParameter = 100;
    kDirNotEmpty = 101;
    kTargetDirExists = 102;
    kFileExists = 103;
    kBlockClosed = 104;
    kBlockExist = 105;
    kReadOnly = 106;
    kUpdateError = 200;
    kSyncMetaFailed = 201;
    kSafeMode = 202;
    kNsNotFound = 300;
    kCsNotFound = 301;
    kTimeout = 400;
    kCsTooMuchUnfinishedWrite = 401;
    kCsTooMuchPendingBuffer = 402;
    kGetChunkServerError = 403;
    kWriteError = 404;
    kReadError = 405;
    kNoPermission = 500;
}

enum ChunkServerStatus {
    kCsActive = 101;
    kCsWaitClean = 102;
    kCsCleaning = 103;
    kCsOffLine = 104;
    kCsStandby = 105;
    kCsReadonly = 106;
}

enum RecoverStat {
    kNotInRecover = 0;
    kLoRecover = 1;
    kHiRecover = 2;
    kCheck = 3;
    kIncomplete = 4;
    kLost = 5;
    kBlockWriting = 6;
    kAny = 20;
}

enum SyncStatus {
    kSyncWrite = 0;
    kSyncDelete = 1;
}

enum RecoverPri {
    kHigh = 0;
    kLow = 1;
}
